<resources>
    <string name="app_name">Sports_Buddy</string>
    <string name="create_a_run">Create A Run</string>
    <string name="location">Location</string>
    <string name="speeds">Speeds</string>
    <string name="textview">TextView</string>
    <string name="theme">Theme</string>
    <string name="approximate_duration">Approximate duration</string>
    <string name="description">Description</string>
    <string name="additional_information">Additional Information</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="choose_a_location">Choose a location</string>
    <string name="make_others_want_to_join">Make Others Want To Join</string>
    <string name="RunLength" />
    <string name="title_activity_maps">Map</string>
    <string name="confirm">Confirm</string>
    <string name="textview2">TextView</string>
    <string name="latng" />
    <string name="parking">Parking</string>
    <string name="maximum_number_of_participants">Maximum Number Of Participants</string>
    <string name="send">Send</string>
    <string name="place_to_Shower">Place To shower</string>
    <string name="place_to_leave_your_stuff">Place To Leave Your Stuff</string>
    <string name="flexible_start_5_10mn">Flexible Start(5–10mn)</string>
    <string name="place_to_change">Place To Change</string>
    <string name="_1km">1km</string>
    <string name="abed" />
    <string name="title2">TITLE:</string>
    <string name="date1">DATE:</string>
    <string name="duration">DURATION:</string>
    <string name="participants">PARTICIPANTS:</string>
    <string name="a">A:</string>
    <string name="d">D:</string>
    <string name="b">B:</string>
    <string name="c">C:</string>
    <string name="e">E:</string>
    <string name="theme1">Theme:</string>
    <string name="minimumspeed">MinimumSpeed:</string>
    <string name="maximumspeed">MaximumSpeed:</string>
    <string name="distance">DISTANCE:</string>
    <string name="description1">DESCRIPTION:</string>
    <string name="time1">TIME:</string>
    <string name="tit">tit</string>
    <string name="join">JOIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here</string>
    <string name="fcm_token">FCM Token: %s</string>
    <string name="back">back</string>
    <string name="available_runs">Available Runs</string>
    <string name="todo">TODO</string>
    <string name="textviewcate">TextView</string>
    <string name="textviewbran">TextView</string>
    <string name="msg_token_fmt" />


</resources>
